# sdr-engineers-thesis

./: .gitignore  .pre-commit-config.yaml  main.py  pyproject.toml
measurement/: _kof_dryrun.csv  _linearity_dryrun.csv  measurement_log_step2db.txt  measurement_log_step5db.txt
src/sdr_engineers_thesis/: __init__.py  main.py
src/sdr_engineers_thesis/core/: __init__.py  hackrf_device.py  processing_result.py  sdr_worker.py  signal_processor.py
src/sdr_engineers_thesis/cpp_modules/: fastfft.cpp  setup.py
src/sdr_engineers_thesis/gui/: __init__.py  main_window.py
src/sdr_engineers_thesis/measurement/: far_measurement.txt  measurement_AMPLITUDE_3400_3800_10mhz-step.txt  measurement_log_step2db_3400_3800_200step_SDR.txt  measurement_runner.py
src/sdr_engineers_thesis/utils/: __init__.py  config.py
